@@ -1,74 +1,26 @@
 # Eketal
-  Eketal is an event based programming model and language for runtime for detencting and monitoring of distributed and concurrent applications.
-   
-  This project uses xtext to develop the programming language, and a compatible library named Jbase, its purpose is to allow the use of pure java expressions and statements into the xtext framework. Also, Eketal uses Aspectj to detect and react events.
+  Eketal is an event based programming model and language for runtime detection, monitoring, and dynamic modification of distributed and concurrent applications.
 
-## 1. Download:
+  This project uses XText to implement a compiler for EKetal. We use Jbase to generate pure java expressions and statements using the XText framework.
 
-### 1. From the page:
+  The compiler generates AspectJ and Java code to instrument distributed applications.
 
-Click in the button "Clone or Download" and press the "Download Zip" option
+  This guide describes first how to install the IDE as an eclipse's plugin. If you are a programmer interested in experimenting with the language or a reviewer interested in the project, this may be the recommended installation procedure.
 
-### 2. Using Git.
+  If you are interested in extending or contributing to the language design and compiler implementation we also provide a description of how to download the source code and generate the development environment. First, we describe how to download the source code, how to compile it using MAVEN. Then we describe how to create the development environment from eclipse.
 
-You must have Git installed.
-Type into the git bash:
-
-```
-  git clone https://github.com/unicesi/eketal.git
-```
-
-## 2. Installation:
-
-There are several ways to install this software: (1) With maven (binaries) (2) With eclipse
-
-### 1. Using maven.
-
-Once you have downloaded the sources, run the folllowing prompts in the command (with maven installed) line
-
-#### 1. Increase memory.
-
-```
-export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=256m"
-```
-
-#### 2. Build the language
-
-```
-cd co.edu.icesi.eketal.parent-master/
-mvn clean install
-```
-
-You can skip the test of the kernel Ketal with this instruction
-
-```
-cd co.edu.icesi.eketal.parent-master/
-mvn clean install -DskipTests=true
-```
-
-#### 3. Build example projects
-
-There are 3 example projects into the test directory, intructions to deploy are inside that [folder](https://github.com/unicesi/eketal/tree/master/test)
-
-### 2. Try it with eclipse:
-
- First, it is necessary to install the tools mencioned at the beginning, here are their update sites repositories, add them to your eclipse as explained next in the "Eclipse update site" tittle.
-
--Xtext http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/
-
--AspectJ http://download.eclipse.org/tools/ajdt/45/dev/update
-
--JBase https://dl.bintray.com/lorenzobettini/xtext-jbase/updates/0.5/
-
-#### 1. Eclipse update site
+# Installing the IDE as an Eclipse's plugin
+#### 1. Open the eclipse IDE
+#### 2. Go to Help ...
+#### 3. Eclipse update site
   This is the eclipse update site repository: http://unicesi.github.io/eketal/repository/
   You can install in your eclipse as follows:
 
    Go to Help -> Install new software.
-   
+
    Add the update site repository and install all the packages.
 
-#### 2. Locally install in your eclipse
+##### 2. Locally install in your eclipse
 #####Compiling from sources
   If you want to compile this project locally, follow the installation instructions using maven, and install it as follow:
 
@@ -78,15 +30,7 @@ There are 3 example projects into the test directory, intructions to deploy are 
 
 Finally find "../co.edu.icesi.eketal.parent-master/co.edu.icesi.eketal.repository/target/repository" directory and accept.
 
-## 3. Developers
-  To contribute , this project can be clone to a local repository and you can work from there.
-  For deploy in your workspace, you must have Eclipse mars, with aspectj, maven and xtext as mentioned in the beggining. Then you can import it as a maven project.
-   
-   In case of having a build path problems with the following message: "The project cannot be built until build path errors are resolved  co.edu.icesi.eketal.ide" in your eclipse, do the following: in the co.edu.icesi.eketal.ide project, you must add manually the missing folders as the following: 
-   >Right click in the co.edu.icesi.eketal.ide project -> New -> Folder.
-   
-   Next, in the name put "src" and repeat the procces to create a "xtend-gen" folder. Finally:
-   >Right click in the in the parent project -> Maven -> Update Project.
-   
-   
-   In case of problems, please submit an issue.
+
+# Installing EKETAL's development environment using MAVEN
+
+# Installing EKETAL's development environment using Eclipse
